--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=devKolkata@2025
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#logging
+logging.level.org.springframework.security=${LOG_LEVEL:TRACE}
