Adding environment specific security configuration based on Spring Boot profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=CricketManager
 server.port=8080
+spring.config.import=application_prod.properties
+spring.profiles.active=prod
 
 #GCP Database
 spring.datasource.url=jdbc:postgresql://35.238.226.139:5432/cricketmanager
