Added few custom security changes for http basic login

--- a/src/main/resources/application_prod.properties
+++ b/src/main/resources/application_prod.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL-AUTO:update}
 
 #logging
 logging.level.org.springframework.security=${LOG_LEVEL:ERROR}
+
+#session_timeout
+server.servlet.session.timeout=${SESSION_TIMEOUT:10m}
+
