--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 #logging
 logging.level.org.springframework.security=${LOG_LEVEL:TRACE}
+
+#session_timeout
+server.servlet.session.timeout=${SESSION_TIMEOUT:20m}
