--- a/src/main/resources/application_prod.properties
+++ b/src/main/resources/application_prod.properties
@@ -3,9 +3,9 @@ spring.application.name=${SPRING_APPLICATION_NAME:CricketManager}
 server.port=${SERVER_PORT:8081}
 
 #GCP Database
-spring.datasource.url=jdbc:postgresql://35.238.226.139:5432/cricketmanager
-spring.datasource.username=postgres
-spring.datasource.password=devKolkata@2025
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL-AUTO:update}
