--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.config.import=application_prod.properties
 spring.profiles.active=prod
 
 #GCP Database
-spring.datasource.url=jdbc:postgresql://35.238.226.139:5432/cricketmanager
-spring.datasource.username=postgres
-spring.datasource.password=devKolkata@2025
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
